# replit

./: README.md  db.sqlite3  pyproject.toml
.lesson/: instructions.md  lessonplan.md
accounts/: models.py
accounts/migrations/: 0001_initial.py
home/: views.py
insta/: settings.py  urls.py  wsgi.py
media_management/: admin.py  forms.py  models.py  utils.py
media_management/migrations/: 0001_initial.py  0002_remove_media_full_path_media_media_file.py
posts/: models.py
templates/: base.html
templates/home/: index.html
users/: models.py
users/migrations/: 0001_initial.py  0002_alter_user_managers.py
